less/hux-blog.less
@import "variables.less";
@import "mixins.less";
@import "sidebar.less";
@import "side-catalog.less";

// Global Components

body {
	.sans-serif;
	font-size: 16px;
	// Hux mpdify to 16px (Mobile First), and increase to 20px while 768+ width
	color: @gray-dark;
	//-webkit-user-select:text; //对于 Blog 还是先不开启这句。
	overflow-x : hidden;
}

// -- Typography

p {
	margin: 30px 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	.sans-serif;
	line-height: 1.1;
	font-weight: bold;
}
h1{
	// drop V1.1.1
	//font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
h4{
    font-size: 21px;
}
a {
	color: @gray-dark;
	&:hover,
	&:focus {
		color: @brand-primary;
	}
}

a img {
	&:hover,
	&:focus {
		cursor: zoom-in;
	}
}

article{
	overflow-x : hidden;
}
blockquote {
	color: @gray;
	font-style: italic;
	font-size: 0.95em;
	margin: 20px 0 20px;
	p{
		margin: 0;
	}
}

// Utils Style Class can be used in Markdown.
small.img-hint{
	display: block;
	margin-top: -20px;
	text-align: center;
}
br + small.img-hint{
	margin-top: -40px;
}
img.shadow{
	box-shadow: rgba(0, 0, 0, 0.258824) 0px 2px 5px 0px;
}
// Utils Style End

// Select 
select{
	-webkit-appearance:none;
	margin-top:15px;
	color:#337ab7;
	border-color:#337ab7;
	padding: 0em 0.4em;
	background: white;
	&.sel-lang{
		min-height: 28px;
		font-size:14px;
	}
}


// override table style in bootstrap
.table th, .table td{
	border: 1px solid #eee !important;
}

hr.small {
	max-width: 100px;
	margin: 15px auto;
	border-width: 4px;
	border-color: white;
}
// add by Hux
pre,.table-responsive{
	// sometimes you should use vendor-feature.
	-webkit-overflow-scrolling: touch;
}
pre code{
	display: block;
	width: auto;
	white-space: pre;	// save it but no-wrap;
	word-wrap: normal;	// no-wrap
}

// In the list of posts
.postlist-container{
	margin-bottom: 15px;
}

// In the post.
.post-container{
	a{
		color:#337ab7;
		// different to @brand-primary
		&:hover,
		&:focus {
			color: @brand-primary;
		}
	}
	h1,
	h2,
	h3,
	h4,
	h5,
	h6 {
		margin: 30px 0 10px;
	}
	h5{
		font-size: 19px;
		font-weight: 600;
		color:gray;
		& + p{
			margin-top: 5px;
		}
	}
	h6{
		font-size: 16px;
		font-weight: 600;
		color: gray;
		& + p{
			margin-top: 5px;
		}
	}
	ul,ol{
		margin-bottom: 40px;
		@media screen and (max-width: 768px){
			&{
				padding-left: 30px;
			}
		}
		@media screen and (max-width: 500px){
			&{
				padding-left: 20px;
			}
		}
	}
	ol ol, ol ul, ul ol, ul ul{
		margin-bottom: 5px
	}
	li{
		p{
			margin: 0;
			margin-bottom: 5px;
		}
		h1,h2,h3,h4,h5,h6{
			line-height: 2;
			margin-top: 20px;
		}
	}
	// V1.6 Hux display title by default.
	.pager li{
		width: 48%;
		&.next{ float: right};
		&.previous{ float: left};
		> a {
			width: 100%;
			> span{
				color: @gray;
				font-weight: normal;
				letter-spacing: 0.5px;
			}
		}
	}
}



// Navigation

// materialize, mobile only
@media only screen and (max-width: 767px) {
	/**
	 * Layout
	 * Since V1.6 we use absolute positioning to prevent to expand container-fluid
	 * which would cover tags. A absolute positioning make a new layer.
	 */
	.navbar-default .navbar-collapse{
		position: absolute; 
     	right: 0;
		border: none;
		background: white;
		box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2);
		box-shadow: rgba(0, 0, 0, 0.117647) 0px 1px 6px, rgba(0, 0, 0, 0.239216) 0px 1px 4px;
		border-radius: 2px;
		width: 170px;
	}
	/**
	 * Animation
	 * HuxBlog-Navbar using genuine Material Design Animation
	 */
	#huxblog_navbar{ 	
		/**
		 * Sharable code and 'out' function
		 */
		// the container do width-transition
		opacity: 0;
		transform: scaleX(0);
		transform-origin: top right;
		transition: all 200ms cubic-bezier(0.47, 0, 0.4, 0.99) 0ms;
		-webkit-transform: scaleX(0);
		-webkit-transform-origin: top right;
		-webkit-transition: all 200ms cubic-bezier(0.47, 0, 0.4, 0.99) 0ms;
		a {
			font-size: 13px;
			line-height: 28px;
		}
		.navbar-collapse{	// the navbar do height-transition
			height: 0px; 	// to solve container-mask-tags issue (default state).
			transform: scaleY(0);
			transform-origin: top right;
			transition: transform 400ms cubic-bezier(0.32, 1, 0.23, 1) 0ms;
			-webkit-transform: scaleY(0);
			-webkit-transform-origin: top right;
			-webkit-transition: -webkit-transform 400ms cubic-bezier(0.32, 1, 0.23, 1) 0ms;
		}
		li{
			opacity: 0;
			transition: opacity 100ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
			-webkit-transition: opacity 100ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
		}
		/**
		 *'In' Animation
		 */
		&.in {
			transform: scaleX(1);
			-webkit-transform: scaleX(1);
			opacity: 1;
			transition: all 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
			-webkit-transition: all 250ms cubic-bezier(0.23,1,0.32,1) 0ms;
			.navbar-collapse{
				transform: scaleY(1);
				-webkit-transform: scaleY(1);
				transition: transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
				-webkit-transition: -webkit-transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
			}
			li{
				opacity: 1;
				transition: opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 205ms;
				-webkit-transition: opacity 450ms cubic-bezier(0.23, 1, 0.32, 1) 205ms;
			}
		}
	}
}
/* ... */

